--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ scipy = "~1.14.0"
 geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "develop"}
 
 #octree-creation-app = {version = ">=0.3.0a1, <0.4.0a.dev", source = "pypi", allow-prereleases = true}
-octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "GEOPY-1788"}
+octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "develop"}
 
 #geoapps-utils = {version = ">=0.5.0a1, <0.6.0a.dev", source = "pypi", allow-prereleases = true}
 geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "develop"}
