--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -85,7 +85,7 @@ dependencies:
   - jedi=0.19.2=pyhff2d567_0
   - jinja2=3.1.4=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_0
-  - json5=0.9.28=pyhff2d567_0
+  - json5=0.10.0=pyhd8ed1ab_0
   - jsonpointer=3.0.0=py310hff52083_1
   - jsonschema=4.23.0=pyhd8ed1ab_0
   - jsonschema-specifications=2024.10.1=pyhd8ed1ab_0
@@ -201,7 +201,7 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.3=py310hff52083_2
   - pycparser=2.22=pyhd8ed1ab_0
-  - pydantic=2.10.1=pyh10f6f8f_0
+  - pydantic=2.10.2=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py310h505e2c1_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h7b68af5_0
@@ -215,7 +215,7 @@ dependencies:
   - pytest-cov=6.0.0=pyhd8ed1ab_0
   - python=3.10.15=h4a871b0_2_cpython
   - python-dateutil=2.9.0.post0=pyhff2d567_0
-  - python-fastjsonschema=2.20.0=pyhd8ed1ab_0
+  - python-fastjsonschema=2.21.0=pyhd8ed1ab_0
   - python-json-logger=2.0.7=pyhd8ed1ab_0
   - python-tzdata=2023.4=pyhd8ed1ab_0
   - python_abi=3.10=5_cp310
@@ -232,7 +232,7 @@ dependencies:
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.1=py310hfcf56fc_1
   - send2trash=1.8.3=pyh0d859eb_0
-  - setuptools=75.6.0=pyhff2d567_0
+  - setuptools=75.6.0=pyhff2d567_1
   - six=1.16.0=pyh6c4a22f_0
   - sniffio=1.3.1=pyhd8ed1ab_0
   - snowballstemmer=2.2.0=pyhd8ed1ab_0
@@ -268,7 +268,7 @@ dependencies:
   - tomli=2.1.0=pyhff2d567_0
   - tomlkit=0.13.2=pyha770c72_0
   - toolz=1.0.0=pyhd8ed1ab_0
-  - tornado=6.4.1=py310ha75aee5_1
+  - tornado=6.4.2=py310ha75aee5_0
   - tqdm=4.67.1=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - types-python-dateutil=2.9.0.20241003=pyhff2d567_0
@@ -298,7 +298,7 @@ dependencies:
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@2a9d77a577fadf9c1256b0385e588e499f7f0dcf
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@a3384338d013434e761dcc392b63dd95ffc81988
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d925c0b9b418a7c8e4c80e18a04fff640d455f43
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@8cf9eb474930e3d901a8a66737d896c4fb63f4fb
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@644febfba1e81b1777a8ebf86744541c8e1fce09
