--- a/environments/py-3.11-win-64.conda.lock.yml
+++ b/environments/py-3.11-win-64.conda.lock.yml
@@ -96,7 +96,7 @@ dependencies:
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=h2466b09_4
   - pycparser=2.22=pyhd8ed1ab_0
-  - pydantic=2.10.1=pyh10f6f8f_0
+  - pydantic=2.10.2=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py311h533ab2d_0
   - pydiso=0.1.2=py311h6340b4d_0
   - pymatsolver=0.2.0=ha770c72_3
@@ -111,7 +111,7 @@ dependencies:
   - pyyaml=6.0.2=py311he736701_1
   - scikit-learn=1.4.2=py311hdcb8d17_1
   - scipy=1.14.1=py311hf16d85f_1
-  - setuptools=75.6.0=pyhff2d567_0
+  - setuptools=75.6.0=pyhff2d567_1
   - six=1.16.0=pyh6c4a22f_0
   - sortedcontainers=2.4.0=pyhd8ed1ab_0
   - tbb=2021.12.0=hc790b64_4
@@ -119,7 +119,7 @@ dependencies:
   - threadpoolctl=3.5.0=pyhc1e730c_0
   - tk=8.6.13=h5226925_1
   - toolz=1.0.0=pyhd8ed1ab_0
-  - tornado=6.4.1=py311he736701_1
+  - tornado=6.4.2=py311he736701_0
   - tqdm=4.67.1=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
@@ -143,7 +143,7 @@ dependencies:
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@2a9d77a577fadf9c1256b0385e588e499f7f0dcf
-      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@a3384338d013434e761dcc392b63dd95ffc81988
+      - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@d925c0b9b418a7c8e4c80e18a04fff640d455f43
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@8cf9eb474930e3d901a8a66737d896c4fb63f4fb
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@644febfba1e81b1777a8ebf86744541c8e1fce09
