--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,8 +48,8 @@ octree-creation-app = {version = ">=0.2.0b1, <0.3.0a.dev", source = "pypi", allo
 geoapps-utils = {version = ">=0.4.0b1, <0.5.0a.dev", source = "pypi", allow-prereleases = true}
 #geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "release/0.4.0"}
 
-mira-simpeg = {version = ">=0.21.2.1b1, <0.21.2.2a.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
-#mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "release/0.21.2.1", extras = ["dask"]}
+#mira-simpeg = {version = ">=0.21.2.1b1, <0.21.2.2a.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
+mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "release/0.21.2.1", extras = ["dask"]}
 
 param-sweeps = {version = ">=0.2.0b1, <0.3.0a.dev", source = "pypi", allow-prereleases = true}
 #param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "release/0.2.0"}
