--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -12,7 +12,7 @@ dependencies:
   - alabaster=0.7.16=pyhd8ed1ab_0
   - annotated-types=0.7.0=pyhd8ed1ab_1
   - anyio=4.6.2.post1=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
+  - argon2-cffi=23.1.0=pyhd8ed1ab_1
   - argon2-cffi-bindings=21.2.0=py310ha75aee5_5
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
@@ -22,7 +22,7 @@ dependencies:
   - attrs=24.2.0=pyh71513ae_0
   - babel=2.16.0=pyhd8ed1ab_1
   - beautifulsoup4=4.12.3=pyha770c72_1
-  - bleach=6.2.0=pyhd8ed1ab_0
+  - bleach=6.2.0=pyhd8ed1ab_1
   - brotli=1.1.0=hb9d3cd8_2
   - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py310hf71b8c6_2
@@ -40,7 +40,7 @@ dependencies:
   - comm=0.2.2=pyhd8ed1ab_0
   - contourpy=1.3.1=py310h3788b33_0
   - coverage=7.6.8=py310h89163eb_0
-  - cycler=0.12.1=pyhd8ed1ab_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.0=py310ha75aee5_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
@@ -52,24 +52,24 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.19=py310hff52083_1
   - empymod=2.2.2=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_1
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
   - fonttools=4.55.1=py310h89163eb_0
-  - fqdn=1.5.1=pyhd8ed1ab_0
+  - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310hcb52e73_4
   - greenlet=3.1.1=py310hf71b8c6_0
-  - h11=0.14.0=pyhd8ed1ab_0
-  - h2=4.1.0=pyhd8ed1ab_0
+  - h11=0.14.0=pyhd8ed1ab_1
+  - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py310h60e0fe6_102
   - hdf5=1.14.3=nompi_h2d575fe_107
-  - hpack=4.0.0=pyh9f0ad1d_0
+  - hpack=4.0.0=pyhd8ed1ab_1
   - httpcore=1.0.7=pyh29332c3_1
   - httpx=0.28.0=pyhd8ed1ab_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - hyperframe=6.0.1=pyhd8ed1ab_1
   - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
   - importlib-metadata=8.5.0=pyha770c72_1
@@ -82,10 +82,10 @@ dependencies:
   - ipywidgets=7.8.5=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_0
   - isort=5.13.2=pyhd8ed1ab_1
-  - jedi=0.19.2=pyhff2d567_0
+  - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.4=pyhd8ed1ab_1
   - joblib=1.4.2=pyhd8ed1ab_0
-  - json5=0.10.0=pyhd8ed1ab_0
+  - json5=0.10.0=pyhd8ed1ab_1
   - jsonpointer=3.0.0=py310hff52083_1
   - jsonschema=4.23.0=pyhd8ed1ab_0
   - jsonschema-specifications=2024.10.1=pyhd8ed1ab_0
@@ -98,8 +98,8 @@ dependencies:
   - jupyter_events=0.10.0=pyhd8ed1ab_0
   - jupyter_server=2.14.2=pyhd8ed1ab_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
-  - jupyterlab=4.2.6=pyhff2d567_0
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
+  - jupyterlab=4.3.2=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_0
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
   - jupytext=1.16.4=pyh80e38bb_0
@@ -131,6 +131,8 @@ dependencies:
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=20_linux64_mkl
   - libllvm14=14.0.6=hcd5def8_4
+  - liblzma=5.6.3=hb9d3cd8_0
+  - liblzma-devel=5.6.3=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.44=hadc24fc_0
@@ -156,8 +158,8 @@ dependencies:
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - mccabe=0.7.0=pyhd8ed1ab_1
   - mdit-py-plugins=0.4.2=pyhd8ed1ab_0
-  - mdurl=0.1.2=pyhd8ed1ab_0
-  - mistune=3.0.2=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - mistune=3.0.2=pyhd8ed1ab_1
   - mkl=2023.2.0=h84fe81f_50496
   - msgpack-python=1.1.0=py310h3788b33_0
   - munkres=1.1.4=pyh9f0ad1d_0
@@ -169,8 +171,8 @@ dependencies:
   - nbconvert-pandoc=7.16.4=hd8ed1ab_1
   - nbformat=5.10.4=pyhd8ed1ab_0
   - ncurses=6.5=he02047a_1
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - notebook=7.2.2=pyhd8ed1ab_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - notebook=7.3.0=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_0
   - numba=0.60.0=py310h5dc88bb_0
   - numcodecs=0.13.1=py310h5eaa309_0
@@ -182,25 +184,25 @@ dependencies:
   - pandas=2.2.3=py310h5eaa309_1
   - pandoc=3.5=ha770c72_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_1
   - partd=1.4.2=pyhd8ed1ab_0
-  - pexpect=4.9.0=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py310hebfe307_1
   - pip=24.3.1=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - platformdirs=4.3.6=pyhd8ed1ab_1
   - pluggy=1.5.0=pyhd8ed1ab_1
-  - prometheus_client=0.21.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
+  - prometheus_client=0.21.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_1
   - psutil=6.1.0=py310ha75aee5_0
   - pthread-stubs=0.4=hb9d3cd8_1002
-  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - ptyprocess=0.7.0=pyhd8ed1ab_1
   - pure_eval=0.2.3=pyhd8ed1ab_0
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.3=py310hff52083_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.2=pyh3cfb1c2_1
+  - pydantic=2.10.3=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py310h505e2c1_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h7b68af5_0
@@ -227,10 +229,10 @@ dependencies:
   - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.22.0=py310h505e2c1_0
+  - rpds-py=0.22.1=py310h505e2c1_0
   - scikit-learn=1.4.2=py310h981052a_1
   - scipy=1.14.1=py310hfcf56fc_1
-  - send2trash=1.8.3=pyh0d859eb_0
+  - send2trash=1.8.3=pyh0d859eb_1
   - setuptools=75.6.0=pyhff2d567_1
   - six=1.16.0=pyhd8ed1ab_1
   - sniffio=1.3.1=pyhd8ed1ab_1
@@ -264,41 +266,43 @@ dependencies:
   - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
   - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.2.1=pyhd8ed1ab_0
+  - tomli=2.2.1=pyhd8ed1ab_1
   - tomlkit=0.13.2=pyha770c72_1
   - toolz=1.0.0=pyhd8ed1ab_0
   - tornado=6.4.2=py310ha75aee5_0
   - tqdm=4.67.1=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20241003=pyhff2d567_0
+  - types-python-dateutil=2.9.0.20241003=pyhd8ed1ab_1
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
-  - typing_utils=0.1.0=pyhd8ed1ab_0
+  - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2024b=hc8b5060_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_0
   - unicodedata2=15.1.0=py310ha75aee5_1
-  - uri-template=1.3.0=pyhd8ed1ab_0
+  - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.2.3=pyhd8ed1ab_1
   - wcwidth=0.2.13=pyhd8ed1ab_1
-  - webcolors=24.8.0=pyhd8ed1ab_0
+  - webcolors=24.8.0=pyhd8ed1ab_1
   - webencodings=0.5.1=pyhd8ed1ab_3
   - websocket-client=1.8.0=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
   - widgetsnbextension=3.6.10=pyhd8ed1ab_0
   - xorg-libxau=1.0.11=hb9d3cd8_1
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xz=5.2.6=h166bdaf_0
+  - xz=5.6.3=hbcc6ac9_0
+  - xz-gpl-tools=5.6.3=hbcc6ac9_0
+  - xz-tools=5.6.3=hb9d3cd8_0
   - yaml=0.2.5=h7f98852_2
   - zarr=2.14.2=pyhd8ed1ab_0
   - zeromq=4.3.5=h3b0a872_7
-  - zict=3.0.0=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
   - zstandard=0.23.0=py310ha39cb0e_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils == 0.4.0b1
       - geoh5py == 0.10.0b3
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@b9aeeb6530796704f25491d21611fd17b68319a7
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@2b3fef7a6261e5deb7c6ea749ca43a88d3d9c880
       - octree-creation-app == 0.2.0b1
       - param-sweeps == 0.2.0b1
 
