--- a/environments/py-3.10-linux-64.conda.lock.yml
+++ b/environments/py-3.10-linux-64.conda.lock.yml
@@ -24,7 +24,7 @@ dependencies:
   - cloudpickle=3.1.0=pyhd8ed1ab_1
   - colorama=0.4.6=pyhd8ed1ab_1
   - contourpy=1.3.1=py310h3788b33_0
-  - cycler=0.12.1=pyhd8ed1ab_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.0=py310ha75aee5_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py310hcb52e73_1
@@ -35,11 +35,11 @@ dependencies:
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310hcb52e73_4
-  - h2=4.1.0=pyhd8ed1ab_0
+  - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py310h60e0fe6_102
   - hdf5=1.14.3=nompi_h2d575fe_107
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - hpack=4.0.0=pyhd8ed1ab_1
+  - hyperframe=6.0.1=pyhd8ed1ab_1
   - importlib-metadata=8.5.0=pyha770c72_1
   - importlib_metadata=8.5.0=hd8ed1ab_1
   - jinja2=3.1.4=pyhd8ed1ab_1
@@ -71,6 +71,8 @@ dependencies:
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=20_linux64_mkl
   - libllvm14=14.0.6=hcd5def8_4
+  - liblzma=5.6.3=hb9d3cd8_0
+  - liblzma-devel=5.6.3=hb9d3cd8_0
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
   - libpng=1.6.44=hadc24fc_0
@@ -107,7 +109,7 @@ dependencies:
   - psutil=6.1.0=py310ha75aee5_0
   - pthread-stubs=0.4=hb9d3cd8_1002
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.2=pyh3cfb1c2_1
+  - pydantic=2.10.3=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py310h505e2c1_0
   - pydiso=0.1.2=py310h7b68af5_0
   - pymatsolver=0.2.0=ha770c72_3
@@ -141,17 +143,19 @@ dependencies:
   - wheel=0.45.1=pyhd8ed1ab_1
   - xorg-libxau=1.0.11=hb9d3cd8_1
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - xz=5.2.6=h166bdaf_0
+  - xz=5.6.3=hbcc6ac9_0
+  - xz-gpl-tools=5.6.3=hbcc6ac9_0
+  - xz-tools=5.6.3=hb9d3cd8_0
   - yaml=0.2.5=h7f98852_2
   - zarr=2.14.2=pyhd8ed1ab_0
-  - zict=3.0.0=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
   - zstandard=0.23.0=py310ha39cb0e_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
       - geoapps-utils == 0.4.0b1
       - geoh5py == 0.10.0b3
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@b9aeeb6530796704f25491d21611fd17b68319a7
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@2b3fef7a6261e5deb7c6ea749ca43a88d3d9c880
       - octree-creation-app == 0.2.0b1
       - param-sweeps == 0.2.0b1
 
