--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -10,7 +10,7 @@ dependencies:
   - alabaster=0.7.16=pyhd8ed1ab_0
   - annotated-types=0.7.0=pyhd8ed1ab_1
   - anyio=4.6.2.post1=pyhd8ed1ab_0
-  - argon2-cffi=23.1.0=pyhd8ed1ab_0
+  - argon2-cffi=23.1.0=pyhd8ed1ab_1
   - argon2-cffi-bindings=21.2.0=py310ha8f682b_5
   - arrow=1.3.0=pyhd8ed1ab_0
   - asciitree=0.3.3=py_2
@@ -20,7 +20,7 @@ dependencies:
   - attrs=24.2.0=pyh71513ae_0
   - babel=2.16.0=pyhd8ed1ab_1
   - beautifulsoup4=4.12.3=pyha770c72_1
-  - bleach=6.2.0=pyhd8ed1ab_0
+  - bleach=6.2.0=pyhd8ed1ab_1
   - brotli=1.1.0=h2466b09_2
   - brotli-bin=1.1.0=h2466b09_2
   - brotli-python=1.1.0=py310h9e98ed7_2
@@ -38,7 +38,7 @@ dependencies:
   - contourpy=1.3.1=py310hc19bc0b_0
   - coverage=7.6.8=py310h38315fa_0
   - cpython=3.10.15=py310hd8ed1ab_2
-  - cycler=0.12.1=pyhd8ed1ab_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.0=py310ha8f682b_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - dataclasses=0.8=pyhc8e2a94_3
@@ -50,24 +50,24 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.19=py310h5588dad_1
   - empymod=2.2.2=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_1
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_0
   - fasteners=0.17.3=pyhd8ed1ab_0
   - fonttools=4.55.1=py310h38315fa_0
-  - fqdn=1.5.1=pyhd8ed1ab_0
+  - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310h4856b71_4
   - greenlet=3.1.1=py310h9e98ed7_0
-  - h11=0.14.0=pyhd8ed1ab_0
-  - h2=4.1.0=pyhd8ed1ab_0
+  - h11=0.14.0=pyhd8ed1ab_1
+  - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py310h2b0be38_102
   - hdf5=1.14.3=nompi_hd5d9e70_107
-  - hpack=4.0.0=pyh9f0ad1d_0
+  - hpack=4.0.0=pyhd8ed1ab_1
   - httpcore=1.0.7=pyh29332c3_1
   - httpx=0.28.0=pyhd8ed1ab_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - hyperframe=6.0.1=pyhd8ed1ab_1
   - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
   - importlib-metadata=8.5.0=pyha770c72_1
@@ -81,10 +81,10 @@ dependencies:
   - ipywidgets=7.8.5=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_0
   - isort=5.13.2=pyhd8ed1ab_1
-  - jedi=0.19.2=pyhff2d567_0
+  - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.4=pyhd8ed1ab_1
   - joblib=1.4.2=pyhd8ed1ab_0
-  - json5=0.10.0=pyhd8ed1ab_0
+  - json5=0.10.0=pyhd8ed1ab_1
   - jsonpointer=3.0.0=py310h5588dad_1
   - jsonschema=4.23.0=pyhd8ed1ab_0
   - jsonschema-specifications=2024.10.1=pyhd8ed1ab_0
@@ -97,8 +97,8 @@ dependencies:
   - jupyter_events=0.10.0=pyhd8ed1ab_0
   - jupyter_server=2.14.2=pyhd8ed1ab_0
   - jupyter_server_terminals=0.5.3=pyhd8ed1ab_0
-  - jupyterlab=4.2.6=pyhff2d567_0
-  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
+  - jupyterlab=4.3.2=pyhd8ed1ab_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_2
   - jupyterlab_server=2.27.3=pyhd8ed1ab_0
   - jupyterlab_widgets=1.1.11=pyhd8ed1ab_0
   - jupytext=1.16.4=pyh80e38bb_0
@@ -121,6 +121,8 @@ dependencies:
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
+  - liblzma=5.6.3=h2466b09_0
+  - liblzma-devel=5.6.3=h2466b09_0
   - libpng=1.6.44=h3ca93ac_0
   - libsodium=1.0.20=hc70643c_0
   - libsqlite=3.47.0=h2466b09_1
@@ -144,8 +146,8 @@ dependencies:
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
   - mccabe=0.7.0=pyhd8ed1ab_1
   - mdit-py-plugins=0.4.2=pyhd8ed1ab_0
-  - mdurl=0.1.2=pyhd8ed1ab_0
-  - mistune=3.0.2=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_1
+  - mistune=3.0.2=pyhd8ed1ab_1
   - mkl=2023.2.0=h6a75c08_50497
   - msgpack-python=1.1.0=py310hc19bc0b_0
   - msys2-conda-epoch=20160418=1
@@ -157,8 +159,8 @@ dependencies:
   - nbconvert-core=7.16.4=pyhd8ed1ab_1
   - nbconvert-pandoc=7.16.4=hd8ed1ab_1
   - nbformat=5.10.4=pyhd8ed1ab_0
-  - nest-asyncio=1.6.0=pyhd8ed1ab_0
-  - notebook=7.2.2=pyhd8ed1ab_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_1
+  - notebook=7.3.0=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_0
   - numba=0.60.0=py310h7793332_0
   - numcodecs=0.13.1=py310hb4db72f_0
@@ -170,16 +172,16 @@ dependencies:
   - pandas=2.2.3=py310hb4db72f_1
   - pandoc=3.5=h57928b3_0
   - pandocfilters=1.5.0=pyhd8ed1ab_0
-  - parso=0.8.4=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_1
   - partd=1.4.2=pyhd8ed1ab_0
-  - pickleshare=0.7.5=py_1003
+  - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py310h3e38d90_1
   - pip=24.3.1=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
   - platformdirs=4.3.6=pyhd8ed1ab_1
   - pluggy=1.5.0=pyhd8ed1ab_1
-  - prometheus_client=0.21.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.48=pyha770c72_0
+  - prometheus_client=0.21.1=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.48=pyha770c72_1
   - psutil=6.1.0=py310ha8f682b_0
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=h2466b09_4
@@ -187,7 +189,7 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_2
   - pybtex-docutils=1.0.3=py310h5588dad_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.2=pyh3cfb1c2_1
+  - pydantic=2.10.3=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py310hc226416_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h5da8fee_0
@@ -215,10 +217,10 @@ dependencies:
   - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_0
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
-  - rpds-py=0.22.0=py310hc226416_0
+  - rpds-py=0.22.1=py310hc226416_0
   - scikit-learn=1.4.2=py310hf2a6c47_1
   - scipy=1.14.1=py310hbd0dde3_1
-  - send2trash=1.8.3=pyh5737063_0
+  - send2trash=1.8.3=pyh5737063_1
   - setuptools=75.6.0=pyhff2d567_1
   - six=1.16.0=pyhd8ed1ab_1
   - sniffio=1.3.1=pyhd8ed1ab_1
@@ -252,27 +254,27 @@ dependencies:
   - tinycss2=1.4.0=pyhd8ed1ab_0
   - tk=8.6.13=h5226925_1
   - toml=0.10.2=pyhd8ed1ab_0
-  - tomli=2.2.1=pyhd8ed1ab_0
+  - tomli=2.2.1=pyhd8ed1ab_1
   - tomlkit=0.13.2=pyha770c72_1
   - toolz=1.0.0=pyhd8ed1ab_0
   - tornado=6.4.2=py310ha8f682b_0
   - tqdm=4.67.1=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
-  - types-python-dateutil=2.9.0.20241003=pyhff2d567_0
+  - types-python-dateutil=2.9.0.20241003=pyhd8ed1ab_1
   - typing-extensions=4.12.2=hd8ed1ab_1
   - typing_extensions=4.12.2=pyha770c72_1
-  - typing_utils=0.1.0=pyhd8ed1ab_0
+  - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2024b=hc8b5060_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_0
   - ucrt=10.0.22621.0=h57928b3_1
   - unicodedata2=15.1.0=py310ha8f682b_1
-  - uri-template=1.3.0=pyhd8ed1ab_0
+  - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.2.3=pyhd8ed1ab_1
   - vc=14.3=ha32ba9b_23
   - vc14_runtime=14.42.34433=he29a5d6_23
   - vs2015_runtime=14.42.34433=hdffcdeb_23
   - wcwidth=0.2.13=pyhd8ed1ab_1
-  - webcolors=24.8.0=pyhd8ed1ab_0
+  - webcolors=24.8.0=pyhd8ed1ab_1
   - webencodings=0.5.1=pyhd8ed1ab_3
   - websocket-client=1.8.0=pyhd8ed1ab_1
   - wheel=0.45.1=pyhd8ed1ab_1
@@ -281,18 +283,19 @@ dependencies:
   - winpty=0.4.3=4
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
+  - xz=5.6.3=h208afaa_0
+  - xz-tools=5.6.3=h2466b09_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
   - zeromq=4.3.5=ha9f60a1_7
-  - zict=3.0.0=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils == 0.4.0b1
       - geoh5py == 0.10.0b3
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@b9aeeb6530796704f25491d21611fd17b68319a7
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@2b3fef7a6261e5deb7c6ea749ca43a88d3d9c880
       - octree-creation-app == 0.2.0b1
       - param-sweeps == 0.2.0b1
 
