--- a/environments/py-3.10-win-64.conda.lock.yml
+++ b/environments/py-3.10-win-64.conda.lock.yml
@@ -21,7 +21,7 @@ dependencies:
   - cloudpickle=3.1.0=pyhd8ed1ab_1
   - colorama=0.4.6=pyhd8ed1ab_1
   - contourpy=1.3.1=py310hc19bc0b_0
-  - cycler=0.12.1=pyhd8ed1ab_0
+  - cycler=0.12.1=pyhd8ed1ab_1
   - cytoolz=1.0.0=py310ha8f682b_1
   - dask-core=2024.6.2=pyhd8ed1ab_0
   - discretize=0.10.0=py310h4856b71_1
@@ -32,11 +32,11 @@ dependencies:
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
   - geoana=0.5.0=py310h4856b71_4
-  - h2=4.1.0=pyhd8ed1ab_0
+  - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py310h2b0be38_102
   - hdf5=1.14.3=nompi_hd5d9e70_107
-  - hpack=4.0.0=pyh9f0ad1d_0
-  - hyperframe=6.0.1=pyhd8ed1ab_0
+  - hpack=4.0.0=pyhd8ed1ab_1
+  - hyperframe=6.0.1=pyhd8ed1ab_1
   - importlib-metadata=8.5.0=pyha770c72_1
   - importlib_metadata=8.5.0=hd8ed1ab_1
   - intel-openmp=2023.2.0=h57928b3_50497
@@ -60,6 +60,8 @@ dependencies:
   - libiconv=1.17=hcfcfb64_2
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
+  - liblzma=5.6.3=h2466b09_0
+  - liblzma-devel=5.6.3=h2466b09_0
   - libpng=1.6.44=h3ca93ac_0
   - libsqlite=3.47.0=h2466b09_1
   - libssh2=1.11.1=he619c9f_0
@@ -95,7 +97,7 @@ dependencies:
   - pthread-stubs=0.4=hcd874cb_1001
   - pthreads-win32=2.9.1=h2466b09_4
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.2=pyh3cfb1c2_1
+  - pydantic=2.10.3=pyh3cfb1c2_0
   - pydantic-core=2.27.1=py310hc226416_0
   - pydiso=0.1.2=py310h5da8fee_0
   - pymatsolver=0.2.0=ha770c72_3
@@ -133,17 +135,18 @@ dependencies:
   - win_inet_pton=1.1.0=pyh7428d3b_8
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
-  - xz=5.2.6=h8d14728_0
+  - xz=5.6.3=h208afaa_0
+  - xz-tools=5.6.3=h2466b09_0
   - yaml=0.2.5=h8ffe710_2
   - zarr=2.14.2=pyhd8ed1ab_0
-  - zict=3.0.0=pyhd8ed1ab_0
+  - zict=3.0.0=pyhd8ed1ab_1
   - zipp=3.21.0=pyhd8ed1ab_1
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
       - geoapps-utils == 0.4.0b1
       - geoh5py == 0.10.0b3
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@b9aeeb6530796704f25491d21611fd17b68319a7
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@2b3fef7a6261e5deb7c6ea749ca43a88d3d9c880
       - octree-creation-app == 0.2.0b1
       - param-sweeps == 0.2.0b1
 
