[DEVOPS-584] Create a package with pixi

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,9 @@ dmypy.json
 
 # tempory generated files
 pyproject-sha.toml
+
+# pixi environments
+.pixi
+*.egg-info
+
+/simpeg_drivers/_version.py
