--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 *.geoh5 filter=lfs diff=lfs merge=lfs -text
 *.h5 filter=lfs diff=lfs merge=lfs -text
 *.min.js filter=lfs diff=lfs merge=lfs -text
+# SCM syntax highlighting
+pixi.lock linguist-language=YAML linguist-generated=true
