--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,95 +1,47 @@
-[tool.poetry]
+[project]
 name = "simpeg-drivers"
-version = "0.3.0-alpha.1"
 description = "Application to run SimPEG inversions with geoh5 files from Geoscience Analyst."
-license = "MIT"
-authors = ["Mira Geoscience <support@mirageoscience.com>"]
-maintainers = [
-    "Benjamin Kary <benjamink@mirageoscience.com>",
-    "Dominique Fournier <dominiquef@mirageoscience.com>",
+readme = "package.rst"
+requires-python = ">=3.10, <3.12"  # geoana does not support 3.12 yet
+license = {file = "LICENSE"}
+authors = [ 
+    { name = "Mira Geoscience", email = "support@mirageoscience.com" }
 ]
+maintainers = [
+    { name = "Benjamin Kary", email = "benjamink@mirageoscience.com" },
+    { name = "Dominique Fournier", email = "dominiquef@mirageoscience.com"}
+]
+keywords = []
+classifiers = []
+dynamic = ["version"]
+
+[project.urls]
 repository = "https://github.com/MiraGeoscience/simpeg-drivers"
 documentation = "https://mirageoscience-simpeg-drivers.readthedocs-hosted.com/"
 homepage = "https://www.mirageoscience.com/mining-industry-software/python-integration/"
-readme = "package.rst"
 
-packages = [
-     { include = "simpeg_drivers" },
-     { include = "simpeg_drivers-assets" },
-]
+[tool.setuptools_scm]
+version_file = "simpeg_drivers/_version.py"
 
+[tool.setuptools]
+include-package-data = false
+
+[tool.setuptools.packages.find]
 include = [
-    { path = "COPYING" },
-    { path = "COPYING.LESSER" },
-    { path = "LICENSE" },
-    { path = "README.rst" },
-    { path = "THIRD_PARTY_SOFTWARE.rst" },
-    { path = "docs/**/THIRD_PARTY_SOFTWARE.rst" },
-]
+    "simpeg_driver",
+    "simpeg_drivers.*",
+    ]
 
-[tool.poetry.dependencies]
-python = "^3.10, <3.12"  # geoana does not support 3.12 yet
+[build-system]
+requires = ["setuptools>=64", "setuptools_scm>=8"]
+build-backend = "setuptools.build_meta"
 
-dask = {version = "2024.6.*", extras = ["distributed"]}  # also in simpeg[dask]
-discretize = "0.10.*"  # also in simpeg, octree-creation-app
-distributed = "2024.6.*"  # because conda-lock doesn't take dask extras into account
-numpy = "~1.26.0" # also in geoh5py, simpeg
-pydiso = "0.1.*"  # not imported, but required at runtime for simpeg
-scipy = "~1.14.0"
+[tool.pixi.project]
+channels = ["conda-forge"]
+platforms = ["win-64", "linux-64"]
 
-## Pip dependencies from Git repositories
-#----------------------------------------
-#geoh5py = {version = ">=0.11.0a1, <0.12.0a.dev", source = "pypi", allow-prereleases = true}
-geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", rev = "develop"}
-
-#octree-creation-app = {version = ">=0.3.0a1, <0.4.0a.dev", source = "pypi", allow-prereleases = true}
-octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", rev = "develop"}
-
-#geoapps-utils = {version = ">=0.5.0a1, <0.6.0a.dev", source = "pypi", allow-prereleases = true}
-geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", rev = "develop"}
-
-#mira-simpeg = {version = ">=0.22.0.1a1, <0.22.1a.dev", source="pypi", allow-prereleases = true, extras = ["dask"]}
-mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", rev = "develop", extras = ["dask"]}
-
-#param-sweeps = {version = ">=0.3.0a1, <0.4.0a.dev", source = "pypi", allow-prereleases = true}
-param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", rev = "develop"}
-
-## force some versions to resolve incompatible resolution between PyPI and Conda
-#-------------------------------------------------------------------------------
-pymatsolver = {version = "0.2.*", source = "pypi"}
-
-## about pip dependencies
-# to be specified to work with conda-lock
-# - from PyPI: my_package = { version = "1.2.3", source = "pypi" }
-# - from Artifactory : my_package = { version = "1.2.3" }
-# - from URL: !!! no actual lock, as tag or branch can move and installation will fetch current !!!
-#   - for a tag:    my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/tags/TAG.tar.gz" }
-#   - for a branch: my_package = { url = "https://github.com/ORGANISATION/REPO/archive/refs/heads/BRANCH.tar.gz" }
-# - to actually lock on a revision: my_package = { git = "https://github.com/ORGANISATION/REPO.git", rev = "GIT_REV" }
-#   (where rev value is a tag, a branch name or a commit hash). Can also use ``branch`` or ``tag`` instead of ``rev``
-
-[tool.poetry.group.dev.dependencies]
-Pygments = "*"
-ipywidgets = "^7.6.5"
-jupyter-book = "*"
-jupytext = "^1.14"
-pylint = "*"
-pytest = "*"
-pytest-cov = "*"
-pyyaml = '*'
-jinja2 = '*'
-packaging = '*'
-readthedocs-sphinx-ext = "*"
-sphinx = "^5.0"
-tomli = "*"
-nbconvert = "~7.16.4"
-
-[tool.conda-lock]
-platforms = ['win-64', 'linux-64']
-channels = ['conda-forge']
-
-[tool.conda-lock.dependencies]
-libblas = "*=*mkl"  # because simpeg already brings in the MKL
+[tool.pixi.dependencies]
+libblas = { version = "*", build = "*mkl" }
 
 ## indirect dependencies, forcing them here for installation through Conda not pip
 #---------------------------------------------------------------------------------
@@ -99,10 +51,9 @@ fsspec = "2022.*"  # from simpeg[dask]
 geoana = ">=0.5.0, <0.6.0"  # from simpeg
 h5py = ">=3.2.1, <4.0.0"  # from geoh5py
 matplotlib-base = ">=3.8.4, <3.9.0"  # from simpeg
-mkl = "2023.2, <2024.1"  # from simpeg
+mkl = ">=2023.2, <2024.1"  # from simpeg
 pandas = ">=2.2.1, <2.3.0"  # from SimPEG, also used by targeting-workflow, petro-lingo
 pydantic = ">=2.5.2, <3.0.0"  # from geoh5py, geoapps-utils
-pydiso = ">=0.1.0, <0.2.0"  # from simpeg
 pymatsolver = ">=0.2.0, <0.3.0"  # from simpeg
 scikit-learn = ">=1.4.0, <1.5.0"  # from SimPEG, also used by geo-unsup-mapper, petro-lingo
 tqdm = ">=4.66.1, <5.0.0"  # from simpeg
@@ -112,6 +63,57 @@ zarr = ">=2.14.2, <2.15.0"  # from simpeg[dask]
 #------------------------------------------------------------------------------
 tbb = "2021.12.*"  # through mkl from SimPEG
 python-tzdata = "2023.4.*"  # through pandas from SimPEG
+
+# [tool.pixi.pypi-options]
+# index-url = "https://sophiec@mirageoscience.com@mirageoscienceltd.jfrog.io/artifactory/pypi/public-pypi-dev/simple"
+
+[tool.pixi.pypi-dependencies]
+## Package installation from src
+# ------------------------------
+simpeg-drivers = { path = ".", editable = true }
+
+## Pip dependencies from Git repositories
+#----------------------------------------
+geoh5py = {git = "https://github.com/MiraGeoscience/geoh5py.git", branch = "develop"}
+
+octree-creation-app = {git = "https://github.com/MiraGeoscience/octree-creation-app.git", branch = "develop"}
+
+geoapps-utils = {git = "https://github.com/MiraGeoscience/geoapps-utils.git", branch = "develop"}
+
+mira-simpeg = {git = "https://github.com/MiraGeoscience/simpeg.git", branch = "develop", extras = ["dask"]}
+
+param-sweeps = {git = "https://github.com/MiraGeoscience/param-sweeps.git", branch = "develop"}
+
+## force some versions to resolve incompatible resolution between PyPI and Conda
+#-------------------------------------------------------------------------------
+
+
+[tool.pixi.environments]
+default = ["test", "build"]
+production = []
+
+[tool.pixi.feature.build]
+pypi-dependencies = { build = "*", twine = "*"}
+tasks = { build = "python -m build"}
+
+[tool.pixi.feature.test.pypi-dependencies]
+Pygments = "*"
+ipywidgets = ">=7.6.5,<8.0.0"
+jupyter-book = "*"
+jupytext = ">=1.14,<2.0"
+pylint = "*"
+pytest = "*"
+pytest-cov = "*"
+pyyaml = '*'
+jinja2 = '*'
+packaging = '*'
+readthedocs-sphinx-ext = "*"
+sphinx = ">=5.0,<6.0"
+tomli = "*"
+nbconvert = ">=7.16.4,<7.17.0"
+
+[tool.pixi.feature.test.tasks]
+test = "pytest --cov --cov-report=xml"
 
 [tool.ruff]
 target-version = "py310"
@@ -179,7 +181,3 @@ fail_under = 90
 [tool.coverage.html]
 skip_empty = true
 skip_covered = true
-
-[build-system]
-requires = ["poetry-core>=1.0.0", "setuptools"]
-build-backend = "poetry.core.masonry.api"
