--- a/environments/py-3.10-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.10-linux-64-dev.conda.lock.yml
@@ -170,7 +170,7 @@ dependencies:
   - nbconvert-core=7.16.5=pyhd8ed1ab_1
   - nbconvert-pandoc=7.16.5=hd8ed1ab_1
   - nbformat=5.10.4=pyhd8ed1ab_1
-  - ncurses=6.5=he02047a_1
+  - ncurses=6.5=h2d0b736_2
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
   - notebook=7.3.2=pyhd8ed1ab_0
   - notebook-shim=0.2.4=pyhd8ed1ab_1
@@ -278,7 +278,7 @@ dependencies:
   - typing_utils=0.1.0=pyhd8ed1ab_1
   - tzdata=2024b=hc8b5060_0
   - uc-micro-py=1.0.3=pyhd8ed1ab_1
-  - unicodedata2=15.1.0=py310ha75aee5_1
+  - unicodedata2=16.0.0=py310ha75aee5_0
   - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.3.0=pyhd8ed1ab_0
   - wcwidth=0.2.13=pyhd8ed1ab_1
@@ -299,9 +299,9 @@ dependencies:
   - pip:
       - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@abdd3bd275deba6a92d741674053a9aabcccbeba
-      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@59133afc4586f2924236098f5f001d402f162667
+      - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@cdc4c59d47c03e1623d538504317595fcc548163
       - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@065db6be99def82cb5476cdeca78afd2ea5a3a43
-      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@cf2ee8d60e69b589b7124d1ad8cbb9649b68c09d
+      - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@dbb6a6e2131f4fb6ab26ffe0dcd1bd8adbbbd74d
 
 variables:
   KMP_WARNINGS: 0
