[DEVOPS-584] Use array of string inside patterns

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,9 +57,9 @@ style = "pep440"
 [tool.poetry-dynamic-versioning.substitution]
 files = ["simpeg_drivers/_version.py", "recipe.yaml"]
 patterns = [
-    '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''',
-    '''(^\s*version\s*(?::.*?)?:\s*['"])[^'"]*(['"])''',
-    '''(^__version_tuple__\s*(?::.*?)?=\s*\()[^)]*(\))''',
+    { value = '''(^__version__\s*(?::.*?)?=\s*['"])[^'"]*(['"])''', mode = "str" },
+    { value = '''(^\s*version\s*(?::.*?)?:\s*['"])[^'"]*(['"])''', mode = "str" },
+    { value = '''(^__version_tuple__\s*(?::.*?)?=\s*\()[^)]*(\))''', mode = "tuple" },
 ]
 
 [tool.poetry-dynamic-versioning.files."simpeg_drivers/_version.py"]
