--- a/environments/py-3.11-linux-64-dev.conda.lock.yml
+++ b/environments/py-3.11-linux-64-dev.conda.lock.yml
@@ -19,7 +19,7 @@ dependencies:
   - astroid=3.3.8=py311h38be061_0
   - asttokens=3.0.0=pyhd8ed1ab_1
   - async-lru=2.0.4=pyhd8ed1ab_1
-  - attrs=24.3.0=pyh71513ae_0
+  - attrs=25.1.0=pyh71513ae_0
   - babel=2.16.0=pyhd8ed1ab_1
   - beautifulsoup4=4.12.3=pyha770c72_1
   - bleach=6.2.0=pyh29332c3_4
@@ -48,17 +48,16 @@ dependencies:
   - debugpy=1.8.12=py311hfdbb021_0
   - decorator=5.1.1=pyhd8ed1ab_1
   - defusedxml=0.7.1=pyhd8ed1ab_0
-  - deprecated=1.2.15=pyhd8ed1ab_1
+  - deprecated=1.2.18=pyhd8ed1ab_0
   - dill=0.3.9=pyhd8ed1ab_1
   - discretize=0.10.0=py311h92ebd52_1
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.19=py311h38be061_1
   - empymod=2.2.2=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_1
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_1
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.55.4=py311h2dc5d0c_0
+  - fonttools=4.55.6=py311h2dc5d0c_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=h267a509_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
@@ -68,10 +67,10 @@ dependencies:
   - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py311h5ed33ec_103
   - hdf5=1.14.4=nompi_h2d575fe_105
-  - hpack=4.0.0=pyhd8ed1ab_1
+  - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.7=pyh29332c3_1
   - httpx=0.28.1=pyhd8ed1ab_0
-  - hyperframe=6.0.1=pyhd8ed1ab_1
+  - hyperframe=6.1.0=pyhd8ed1ab_0
   - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
   - importlib-metadata=8.6.1=pyha770c72_0
@@ -83,7 +82,7 @@ dependencies:
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipywidgets=7.8.5=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_1
-  - isort=5.13.2=pyhd8ed1ab_1
+  - isort=6.0.0=pyhd8ed1ab_0
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.5=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
@@ -137,7 +136,7 @@ dependencies:
   - liblzma=5.6.3=hb9d3cd8_1
   - libnghttp2=1.64.0=h161d5f1_0
   - libnsl=2.0.1=hd590300_0
-  - libpng=1.6.45=h943b412_0
+  - libpng=1.6.46=h943b412_0
   - libsodium=1.0.20=h4ab18f5_0
   - libsqlite=3.48.0=hee588c1_1
   - libssh2=1.11.1=hf672d98_0
@@ -168,9 +167,9 @@ dependencies:
   - myst-nb=1.1.2=pyhd8ed1ab_1
   - myst-parser=1.0.0=pyhd8ed1ab_0
   - nbclient=0.10.2=pyhd8ed1ab_0
-  - nbconvert=7.16.5=hd8ed1ab_1
-  - nbconvert-core=7.16.5=pyhd8ed1ab_1
-  - nbconvert-pandoc=7.16.5=hd8ed1ab_1
+  - nbconvert=7.16.6=hb482800_0
+  - nbconvert-core=7.16.6=pyh29332c3_0
+  - nbconvert-pandoc=7.16.6=hed9df3c_0
   - nbformat=5.10.4=pyhd8ed1ab_1
   - ncurses=6.5=h2d0b736_2
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
@@ -191,7 +190,7 @@ dependencies:
   - pexpect=4.9.0=pyhd8ed1ab_1
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py311h82a398c_1
-  - pip=24.3.1=pyh8b19718_2
+  - pip=25.0=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.6=pyhd8ed1ab_1
   - pluggy=1.5.0=pyhd8ed1ab_1
@@ -204,12 +203,12 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_3
   - pybtex-docutils=1.0.3=py311h38be061_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.5=pyh3cfb1c2_0
+  - pydantic=2.10.6=pyh3cfb1c2_0
   - pydantic-core=2.27.2=py311h9e33e62_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py311h979a38d_0
   - pygments=2.19.1=pyhd8ed1ab_0
-  - pylint=3.3.3=pyhd8ed1ab_0
+  - pylint=3.3.4=pyh29332c3_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
   - pyparsing=3.2.1=pyhd8ed1ab_0
@@ -227,7 +226,7 @@ dependencies:
   - pyzmq=26.2.0=py311h7deb3e3_3
   - readline=8.2=h8228510_1
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
-  - referencing=0.36.1=pyhd8ed1ab_0
+  - referencing=0.36.2=pyh29332c3_0
   - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
@@ -300,10 +299,10 @@ dependencies:
   - zstandard=0.23.0=py311hbc35293_1
   - zstd=1.5.6=ha6fb4c9_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@3acc55f9f9a849f6f1537977471913e9f6331125
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@728633f4332d7b5052a4b7e3f8958b287222f26b
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@0074bae221e775aa3d8abff37de2304a94c411f3
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@f5fe8fd5af50ee1f4252f3ce5eb57adc980a0aa8
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@8a2af2a57144c32419db9335ba623518930b9621
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@dbb6a6e2131f4fb6ab26ffe0dcd1bd8adbbbd74d
 
 variables:
