--- a/environments/py-3.10-win-64-dev.conda.lock.yml
+++ b/environments/py-3.10-win-64-dev.conda.lock.yml
@@ -17,7 +17,7 @@ dependencies:
   - astroid=3.3.8=py310h5588dad_0
   - asttokens=3.0.0=pyhd8ed1ab_1
   - async-lru=2.0.4=pyhd8ed1ab_1
-  - attrs=24.3.0=pyh71513ae_0
+  - attrs=25.1.0=pyh71513ae_0
   - babel=2.16.0=pyhd8ed1ab_1
   - beautifulsoup4=4.12.3=pyha770c72_1
   - bleach=6.2.0=pyh29332c3_4
@@ -51,11 +51,10 @@ dependencies:
   - distributed=2024.6.2=pyhd8ed1ab_0
   - docutils=0.19=py310h5588dad_1
   - empymod=2.2.2=pyhd8ed1ab_0
-  - entrypoints=0.4=pyhd8ed1ab_1
   - exceptiongroup=1.2.2=pyhd8ed1ab_1
   - executing=2.1.0=pyhd8ed1ab_1
   - fasteners=0.19=pyhd8ed1ab_1
-  - fonttools=4.55.4=py310h38315fa_0
+  - fonttools=4.55.6=py310h38315fa_0
   - fqdn=1.5.1=pyhd8ed1ab_1
   - freetype=2.12.1=hdaf720e_2
   - fsspec=2022.11.0=pyhd8ed1ab_0
@@ -65,10 +64,10 @@ dependencies:
   - h2=4.1.0=pyhd8ed1ab_1
   - h5py=3.12.1=nompi_py310h972678a_103
   - hdf5=1.14.4=nompi_hd5d9e70_105
-  - hpack=4.0.0=pyhd8ed1ab_1
+  - hpack=4.1.0=pyhd8ed1ab_0
   - httpcore=1.0.7=pyh29332c3_1
   - httpx=0.28.1=pyhd8ed1ab_0
-  - hyperframe=6.0.1=pyhd8ed1ab_1
+  - hyperframe=6.1.0=pyhd8ed1ab_0
   - idna=3.10=pyhd8ed1ab_1
   - imagesize=1.4.1=pyhd8ed1ab_0
   - importlib-metadata=8.6.1=pyha770c72_0
@@ -81,7 +80,7 @@ dependencies:
   - ipython_genutils=0.2.0=pyhd8ed1ab_2
   - ipywidgets=7.8.5=pyhd8ed1ab_0
   - isoduration=20.11.0=pyhd8ed1ab_1
-  - isort=5.13.2=pyhd8ed1ab_1
+  - isort=6.0.0=pyhd8ed1ab_0
   - jedi=0.19.2=pyhd8ed1ab_1
   - jinja2=3.1.5=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_1
@@ -123,7 +122,7 @@ dependencies:
   - libjpeg-turbo=3.0.0=hcfcfb64_1
   - liblapack=3.9.0=20_win64_mkl
   - liblzma=5.6.3=h2466b09_1
-  - libpng=1.6.45=had7236b_0
+  - libpng=1.6.46=had7236b_0
   - libsodium=1.0.20=hc70643c_0
   - libsqlite=3.48.0=h67fdade_1
   - libssh2=1.11.1=he619c9f_0
@@ -155,9 +154,9 @@ dependencies:
   - myst-nb=1.1.2=pyhd8ed1ab_1
   - myst-parser=1.0.0=pyhd8ed1ab_0
   - nbclient=0.10.2=pyhd8ed1ab_0
-  - nbconvert=7.16.5=hd8ed1ab_1
-  - nbconvert-core=7.16.5=pyhd8ed1ab_1
-  - nbconvert-pandoc=7.16.5=hd8ed1ab_1
+  - nbconvert=7.16.6=hb482800_0
+  - nbconvert-core=7.16.6=pyh29332c3_0
+  - nbconvert-pandoc=7.16.6=hed9df3c_0
   - nbformat=5.10.4=pyhd8ed1ab_1
   - nest-asyncio=1.6.0=pyhd8ed1ab_1
   - notebook=7.3.2=pyhd8ed1ab_0
@@ -176,7 +175,7 @@ dependencies:
   - partd=1.4.2=pyhd8ed1ab_0
   - pickleshare=0.7.5=pyhd8ed1ab_1004
   - pillow=10.3.0=py310h3e38d90_1
-  - pip=24.3.1=pyh8b19718_2
+  - pip=25.0=pyh8b19718_0
   - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
   - platformdirs=4.3.6=pyhd8ed1ab_1
   - pluggy=1.5.0=pyhd8ed1ab_1
@@ -189,12 +188,12 @@ dependencies:
   - pybtex=0.24.0=pyhd8ed1ab_3
   - pybtex-docutils=1.0.3=py310h5588dad_2
   - pycparser=2.22=pyh29332c3_1
-  - pydantic=2.10.5=pyh3cfb1c2_0
+  - pydantic=2.10.6=pyh3cfb1c2_0
   - pydantic-core=2.27.2=py310hc226416_0
   - pydata-sphinx-theme=0.15.4=pyhd8ed1ab_0
   - pydiso=0.1.2=py310h5da8fee_0
   - pygments=2.19.1=pyhd8ed1ab_0
-  - pylint=3.3.3=pyhd8ed1ab_0
+  - pylint=3.3.4=pyh29332c3_0
   - pymatsolver=0.2.0=ha770c72_3
   - pymatsolver-base=0.2.0=pyh44b312d_3
   - pyparsing=3.2.1=pyhd8ed1ab_0
@@ -213,7 +212,7 @@ dependencies:
   - pyyaml=6.0.2=py310h38315fa_2
   - pyzmq=26.2.0=py310h656833d_3
   - readthedocs-sphinx-ext=2.2.5=pyhd8ed1ab_1
-  - referencing=0.36.1=pyhd8ed1ab_0
+  - referencing=0.36.2=pyh29332c3_0
   - requests=2.32.3=pyhd8ed1ab_1
   - rfc3339-validator=0.1.4=pyhd8ed1ab_1
   - rfc3986-validator=0.1.1=pyh9f0ad1d_0
@@ -270,9 +269,9 @@ dependencies:
   - unicodedata2=16.0.0=py310ha8f682b_0
   - uri-template=1.3.0=pyhd8ed1ab_1
   - urllib3=2.3.0=pyhd8ed1ab_0
-  - vc=14.3=ha32ba9b_23
-  - vc14_runtime=14.42.34433=he29a5d6_23
-  - vs2015_runtime=14.42.34433=hdffcdeb_23
+  - vc=14.3=h5fd82a7_24
+  - vc14_runtime=14.42.34433=h6356254_24
+  - vs2015_runtime=14.42.34433=hfef2bbc_24
   - wcwidth=0.2.13=pyhd8ed1ab_1
   - webcolors=24.11.1=pyhd8ed1ab_0
   - webencodings=0.5.1=pyhd8ed1ab_3
@@ -291,10 +290,10 @@ dependencies:
   - zstandard=0.23.0=py310he5e10e1_1
   - zstd=1.5.6=h0ea2cb4_0
   - pip:
-      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@007da1d142502378a4da9b7760c6b178986368a3
+      - geoapps-utils @ git+https://github.com/MiraGeoscience/geoapps-utils.git@3acc55f9f9a849f6f1537977471913e9f6331125
       - geoh5py @ git+https://github.com/MiraGeoscience/geoh5py.git@728633f4332d7b5052a4b7e3f8958b287222f26b
       - mira-simpeg @ git+https://github.com/MiraGeoscience/simpeg.git@0074bae221e775aa3d8abff37de2304a94c411f3
-      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@f5fe8fd5af50ee1f4252f3ce5eb57adc980a0aa8
+      - octree-creation-app @ git+https://github.com/MiraGeoscience/octree-creation-app.git@8a2af2a57144c32419db9335ba623518930b9621
       - param-sweeps @ git+https://github.com/MiraGeoscience/param-sweeps.git@dbb6a6e2131f4fb6ab26ffe0dcd1bd8adbbbd74d
 
 variables:
