--- a/meta.yaml
+++ b/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "simpeg-drivers" %}
-{% set version = "0.2.0" %}
+{% set version = "0.2.1a1" %}
+{% set python_min = "3.10.0" %}
 
 package:
   name: {{ name|lower }}
@@ -15,35 +16,35 @@ build:
 
 requirements:
   host:
-    - python >=3.10, <3.11
+    - python 3.10.*
     - poetry-core >=1.0.0
     - setuptools
     - pip
   run:
-    - python >=3.10,<3.11
+    - python >={{ python_min }}
     - dask-core 2024.06.*
-    - discretize >=0.10.0,<0.11.0
+    - discretize >=0.10.0,<0.11.dev
     - distributed >=2024.06.*
-    - numpy >=1.26.0,<1.27.0
-    - scipy >=1.14.0,<1.15.0
-    - geoh5py >=0.10.0b1,<0.11.0a.dev
-    - octree-creation-app >=0.2.0b1,<0.3.0a.dev
-    - geoapps-utils >=0.4.0b1,<0.5.0a.dev
-    - mira-simpeg >=0.21.2.1b1,<0.22.0a.dev
-    - param-sweeps >=0.2.0b1,<0.2.1a.dev
+    - numpy >=1.26.0,<1.27.dev
+    - scipy >=1.14.0,<1.15.dev
+    - geoh5py >=0.10.0b1,<0.11.dev
+    - octree-creation-app >=0.2.0b1,<0.3.dev
+    - geoapps-utils >=0.4.0b1,<0.5.dev
+    - mira-simpeg >=0.21.2.1b1,<0.22.dev
+    - param-sweeps >=0.2.0b1,<0.2.1.dev
     - pillow >=10.3.0
-    - empymod >=2.2.1,<2.3.0
-    - geoana >=0.5.0,<0.6.0
-    - h5py >=3.2.1,<4.0.0
-    - matplotlib-base >=3.8.4,<3.9.0
-    - mkl >=2023.2, <2023.3
-    - pandas >=2.2.1,<2.3.0
-    - pydantic >=2.5.2,<3.0.0
-    - pydiso >=0.1.0, <0.2.0
-    - pymatsolver >=0.2.0,<0.3.0
-    - scikit-learn >=1.4.0,<1.5.0
-    - tqdm >=4.66.1,<5.0.0
-    - zarr >=2.14.2,<2.15.0
+    - empymod >=2.2.1,<2.3.dev
+    - geoana >=0.5.0,<0.6.dev
+    - h5py >=3.2.1,<4.0.dev
+    - matplotlib-base >=3.8.4,<3.9.dev
+    - mkl >=2024.2.2, <2025.dev
+    - pandas >=2.2.1,<2.3.dev
+    - pydantic >=2.5.2,<3.0.dev
+    - pydiso >=0.1.0, <0.2.dev
+    - pymatsolver >=0.2.0,<0.3.dev
+    - scikit-learn >=1.4.0,<1.5.dev
+    - tqdm >=4.66.1,<5.0.dev
+    - zarr >=2.14.2,<2.15.dev
   run_constrained:
     - tbb 2021.12.*
     - python-tzdata 2023.4.*
@@ -56,5 +57,5 @@ about:
 
 extra:
   recipe-maintainers:
-    - SophieCurinier
+    - andrewg-mira
     - sebhmg
