--- a/recipe.yaml
+++ b/recipe.yaml
@@ -26,11 +26,11 @@ requirements:
   run:
     - python >=${{ python_min }}
     # Mira packages
-    - geoapps-utils >=0.4.0b1,<0.5.dev
-    - geoh5py >=0.10.0b1,<0.11.dev
-    - octree-creation-app >=0.2.0b1,<0.3.dev
-    - mira-simpeg >=0.21.2.1b1,<0.22.dev
-    - param-sweeps >=0.2.0b1,<0.2.1.dev
+    - geoapps-utils >=0.4.0, <0.5.dev
+    - geoh5py >=0.10.0, <0.11.dev
+    - octree-creation-app >=0.2.0, <0.3.dev
+    - mira-simpeg >=0.21.2.1, <0.22.dev
+    - param-sweeps >=0.2.0, <0.2.1.dev
     # direct dependencies
     - dask-core >=2024.06, <2024.07.dev
     - discretize >=0.10.0, <0.11.dev
