[GEOPY-2029] datascience runner failed. Try Windows 2019 and 2025...
FAILED tests/run_tests/driver_airborne_tem_test.py::test_airborne_tem_run - AssertionError:
Arrays are not less-ordered
Mismatched elements: 1 / 1 (100%)
Max absolute difference: 3.84111921
Max relative difference: 38.41119214
 x: array(3.941119)
 y: array(0.1)

FAILED tests/run_tests/driver_ground_tem_test.py::test_ground_tem_run - AssertionError:
Arrays are not less-ordered
Mismatched elements: 1 / 1 (100%)
Max absolute difference: 62.11970467
Max relative difference: 621.19704672
 x: array(62.219705)
 y: array(0.1)

--- a/.github/workflows/python_analysis.yml
+++ b/.github/workflows/python_analysis.yml
@@ -35,7 +35,7 @@ jobs:
     with:
       package-manager: 'conda'
       python-versions: '["3.10", "3.11", "3.12"]'
-      os: '["ubuntu-latest", "windows-datascience-4cpu"]'
+      os: '["ubuntu-latest", "windows-2019", "windows-2025"]'
       cache-number: 1
       codecov-reference-python-version: '3.10'
       codecov-reference-os: '["windows-latest"]'
